src/components/welcome/WelcomeSection.module.scss
@import "../../styles/colors.scss";
@import "../../../public/fonts/fonts.scss";
@import "../../styles/variables.scss";

.welcomeSection {
  background: #2b314d;
  margin-bottom: 140px;
  width: 100%;

  @media (max-width: 768px) {
    margin-bottom: 62px;
  }
}

.welcomeBg {
  display: flex;
  justify-content: center;
  width: 100%;
  background-image: url("/block-images/welcome.webp");
  background-repeat: no-repeat;
  // background-size: 55% auto;
  background-position: right 121px top 66px;
  max-width: 90rem;
  margin: 0 auto;
  height: 540px;

  & :global(.container) {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 100%;
  }

  @media (max-width: 1180px) {
    background-size: 50% auto;
    background-position: right 20px center;
  }

  @media (max-width: 990px) {
    background-size: 45% auto;
  }

  @media (max-width: 768px) {
    padding-top: 21rem;
    height: auto;
    justify-content: flex-end;
    background-size: auto 60%;
    background-position: top 7px center;
    margin: 0 auto 24px auto;
  }

  @media (max-width: 576px) {
    background-image: url("/block-images/welcome-mobile.webp");
  }

  @media (max-width: 530px) {
    background-size: auto 50%;
    padding-top: 14.35rem;
  }

  @media (max-width: 380px) {
    background-size: auto 50%;
    padding-top: 12.35rem;
  }
}

.welcomeContent {
  display: flex;
  flex-direction: column;
  gap: 3rem;
  position: relative;
  z-index: 1;
  max-width: 72.5rem;

  @media (max-width: 768px) {
    button {
      align-self: center;
      max-height: 77px;
    }
  }
}

.welcomeText {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 48px;
  width: 410px;
  max-width: 50%;
  // margin-left: -20px;

  button {
    // min-width: 311px !important;

    @media (max-width: 768px) {
      min-width: 248px !important;
    }
  }

  .bonusText {
    display: none;
  }

  @media (max-width: 1280px) {
    margin-left: 0;
  }

  @media (max-width: 768px) {
    width: 100%;
    max-width: 100%;
    gap: 24px;
    align-items: center;
    text-align: center;

    .bonusText {
      display: block;
    }
    .offerText {
      display: none;
    }
  }

  @media (max-width: 380px) {
    gap: 20px;
  }
}

.welcomeText h2 {
  font-family: $font-secondary;
  font-size: 64px;
  font-style: normal;
  font-weight: 700;
  text-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
  line-height: normal;
  text-transform: uppercase;
  color: $text-color-welcome;

  // background: $text-color-secondary;
  // background-clip: text;
  // -webkit-background-clip: text;
  // -webkit-text-fill-color: transparent;

  @media (max-width: 768px) {
    display: none;
  }
}

.welcomeText p {
  font-family: $font-primary;
  color: #fff;
  font-size: 32px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;

  @media (max-width: 768px) {
    font-size: 24px;
    font-family: $font-secondary;
    font-weight: 700;
    text-transform: uppercase;
    color: $text-color-welcome;
  }

  @media (max-width: 380px) {
    font-size: 20px;
  }
}

